--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,9 @@ body{
 	z-index: -1;
 }
 
+#regis{
+  overflow-y: scroll;
+}
 .container{
     width: 100vw;
     height: 100vh;
@@ -145,7 +148,7 @@ form{
 	padding: 0.5rem 0.7rem;
 	font-size: 1.2rem;
 	color: #555;
-	font-family: 'poppins', sans-serif;
+	font-family: 'sniglet', sans-serif;
 }
 
 .input-div.pass{
@@ -154,7 +157,7 @@ form{
 
 a{
 	display: block;
-	text-align: right;
+	text-align: center;
 	text-decoration: none;
 	color: #999;
 	font-size: 0.9rem;
@@ -176,7 +179,7 @@ a:hover{
 	background-size: 200%;
 	font-size: 1.2rem;
 	color: #fff;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'sniglet', sans-serif;
 	text-transform: uppercase;
 	margin: 1rem 0;
 	cursor: pointer;
